--- a/UI/html/signup.html
+++ b/UI/html/signup.html
@@ -35,7 +35,7 @@
                     booking a seat on
                     any trip and travel safe, in comfort and like a boss.</p>
             </div>
-            <form action="" class="flex-right-card flex-medium">
+            <form action="" class="flex-right-card flex-medium border-radius" id="signup-form">
                 <h1 class="section-title">Signup</h1>
                 <div class="col-md-2">
                     <div class="flex-input-center">
@@ -55,7 +55,7 @@
                 <!-- email -->
                 <label for="email"><b>Email</b></label>
                 <input type="text" placeholder="Enter Email" name="email" id="email">
-                <p><span class="error error-email"></span></p>
+                <p><span class="error error-email"></span></p><br>
 
                 <!-- Phone -->
                 <label for="phone"><b>Phone</b></label>
@@ -95,41 +95,17 @@
                 <!-- password -->
                 <label for="password"><b>Password</b></label>
                 <input type="password" placeholder="Enter Password" name="confirm_pwd" id="password">
-                <p><span class="error error-password"></span></p>
+                <p><span class="error error-password"></span></p><br>
 
                 <!-- confirm password -->
                 <label for="confirmPassword"><b>Confirm Password</b></label>
                 <input type="password" placeholder="Confirm Password" name="pwd" id="confirmPassword">
-                <p><span class="error error-confirmPassword"></span></p>
+                <p><span class="error error-confirmPassword"></span></p><br>
 
                 <button type="button" class="btn btn-secondary" onclick="new SignUp();">Signup</button>
             </form>
         </div>
     </section>
-    <footer class="footer">
-        <a href="#" id="toTop" style="display: block;"> <span id="toTopHover" style="opacity: 1;"> </span></a>
-
-        <div class="footer-icons">
-            <a href="#" class="footer-single-icon">
-                <i class="fab fa-facebook"></i>
-            </a>
-            <a href="#" class="footer-single-icon">
-                <i class="fab fa-instagram"></i>
-            </a>
-            <a href="#" class="footer-single-icon">
-                <i class="fab fa-twitter"></i>
-            </a>
-            <a href="#" class="footer-single-icon">
-                <i class="fab fa-linkedin"></i>
-            </a>
-            <a href="#" class="footer-single-icon">
-                <i class="fab fa-whatsapp"></i>
-            </a>
-        </div>
-        <div class="copyright align-center">
-            <p class="fg-white"> &copy; Eliezer Basubi</p>
-        </div>
-    </footer>
 </body>
 <script src="../js/signup.js"></script>
 
