--- a/UI/index.html
+++ b/UI/index.html
@@ -15,12 +15,14 @@
 <body>
     <header class="top-header">
         <!-- Start Navigation  bar -->
-        <div class="navbar">
+        <div class="navbar" id="home-nav">
             <h1 class="logo" id="logo"><a href="index.html">WayFarer<span> Trips</span></a></h1>
             <ul class="navbar-list">
                 <li class="current"><a href="">Home</a></li>
                 <li><a href="html/login.html">Login</a></li>
                 <li><a href="html/signup.html">Signup</a></li>
+                <li class="hidden-responsive"><a href="#contact"><i class="fas fa-envelope"></i></a></li>
+                <li class="display-on-full"><a href="#contact">Contact</a></li>
             </ul>
         </div>
         <!-- End Navigation bar -->
@@ -57,7 +59,7 @@
                     Never miss the chance to visit the stunning places around you. Book now and keep your seat for this
                     upcoming trip.
                 </p>
-                <input type="button" value="View Details" class="btn btn-primary">
+                <input type="button" value="View Details" class="btn btn-primary btn_details">
             </article>
 
             <article class="single-article">
@@ -73,7 +75,7 @@
                     Never miss the chance to visit the stunning places around you. Book now and keep your seat for this
                     upcoming trip.
                 </p>
-                <input type="button" value="View Details" class="btn btn-primary">
+                <input type="button" value="View Details" class="btn btn-primary btn_details">
             </article>
 
             <article class="single-article">
@@ -89,7 +91,7 @@
                     Never miss the chance to visit the stunning places around you. Book now and keep your seat for this
                     upcoming trip.
                 </p>
-                <input type="button" value="View Details" class="btn btn-primary">
+                <input type="button" value="View Details" class="btn btn-primary btn_details">
             </article>
             <article class="single-article">
                 <div class="single-article-header-img">
@@ -104,7 +106,7 @@
                     Never miss the chance to visit the stunning places around you. Book now and keep your seat for this
                     upcoming trip.
                 </p>
-                <input type="button" value="View Details" class="btn btn-primary">
+                <input type="button" value="View Details" class="btn btn-primary btn_details">
             </article>
             <article class="single-article">
                 <div class="single-article-header-img">
@@ -119,7 +121,7 @@
                     Never miss the chance to visit the stunning places around you. Book now and keep your seat for this
                     upcoming trip.
                 </p>
-                <input type="button" value="View Details" class="btn btn-primary">
+                <input type="button" value="View Details" class="btn btn-primary btn_details">
             </article>
             <article class="single-article">
                 <div class="single-article-header-img">
@@ -134,7 +136,7 @@
                     Never miss the chance to visit the stunning places around you. Book now and keep your seat for this
                     upcoming trip.
                 </p>
-                <input type="button" value="View Details" class="btn btn-primary">
+                <input type="button" value="View Details" class="btn btn-primary btn_details">
             </article>
         </div>
     </section>
@@ -265,6 +267,7 @@
 
     <!-- Footer -->
     <footer class="footer">
+        <h3 class="section-title fg-white">Follow Us On : </h3>
         <a href="#" id="toTop" style="display: block;"> <span id="toTopHover" style="opacity: 1;"> </span></a>
 
         <div class="footer-icons">
