ch(update-ui) : Delivers completed changes on CSS and HTML
- add link to css pages
- add new css style.
- add all.css files
[Delivers #167728722]

--- a/UI/index.html
+++ b/UI/index.html
@@ -8,6 +8,8 @@
     <title>WayFarer Trips</title>
     <link rel="shortcut icon" href="assets/images/waytrip.png" type="image/x-icon">
     <link rel="stylesheet" href="css/stylesheet.css">
+    <link rel="stylesheet" href="css/homepage.css">
+    <link rel="stylesheet" href="css/forms.css">
     <script src="js/all.js"></script>
     <script src="js/index.js"></script>
 </head>
