--- a/UI/html/dashboard.html
+++ b/UI/html/dashboard.html
@@ -8,6 +8,7 @@
     <title>Dashboard | WayFarer</title>
     <link rel="shortcut icon" href="../assets/images/waytrip.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/stylesheet.css">
+    <link rel="stylesheet" href="../css/forms.css">
     <script src="../js/all.js"></script>
     <script src="../js/index.js"></script>
 </head>
@@ -150,7 +151,7 @@
                             <option value="">Tanzania</option>
                         </select>
                         </div>
-                        <div class="flex-input-center">
+                        <div class="flex-input-center responsive-margin-top">
                         <label for="user_city" class="flex-input-center responsive-margin-top"><b>Destination</b></label>
                         <select name="" id="user_city" class="flex-input-center ">
                             <option value="">Filter trip by destination</option>
