--- a/UI/html/passwordreset.html
+++ b/UI/html/passwordreset.html
@@ -8,6 +8,7 @@
     <title>Login | Flash WayFarer</title>
     <link rel="shortcut icon" href="../assets/images/waytrip.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/stylesheet.css">
+    <link rel="stylesheet" href="../css/forms.css">
     <script src="../js/index.js"></script>
     <script src="../js/all.js"></script>
 </head>
