ft(integration):  integrate backend with frontend
- add static UI endpoint
- add signup and signin integration
- change endpoint queries

[Finishes  #168272228]

--- a/UI/index.html
+++ b/UI/index.html
@@ -21,8 +21,8 @@
             <h1 class="logo" id="logo"><a href="index.html">WayFarer<span> Trips</span></a></h1>
             <ul class="navbar-list">
                 <li class="current"><a href="">Home</a></li>
-                <li><a href="html/login.html">Login</a></li>
-                <li><a href="html/signup.html">Signup</a></li>
+                <li><a href="pages/login.html">Login</a></li>
+                <li><a href="pages/signup.html">Signup</a></li>
                 <li class="hidden-responsive"><a href="#contact"><i class="fas fa-envelope"></i></a></li>
                 <li class="display-on-full"><a href="#contact">Contact</a></li>
             </ul>
