--- a/UI/pages/login.html
+++ b/UI/pages/login.html
@@ -38,7 +38,8 @@
                 </p>
             </div>
             <div class="flex-right-card border-radius" id="login-form">
-                <h1 class="section-title">Login</h1>
+                <h1 class="section-title">Login</h1><br>
+                <span class="error error-api"></span>
 
                 <label for="email"><b>Email</b></label>
                 <input type="text" placeholder="Enter Email" name="email" id="email_log">
