--- a/UI/pages/signup.html
+++ b/UI/pages/signup.html
@@ -69,25 +69,25 @@
                         <label for="user_country"><b>Country</b></label>
                         <select name="country" id="user_country">
                             <option value="" selected disabled>Select country where you live</option>
-                            <option value="">Congo</option>
-                            <option value="">Rwanda</option>
-                            <option value="">Kenya</option>
-                            <option value="">Uganda</option>
-                            <option value="">Tanzania</option>
+                            <option value="DR Congo">DR Congo</option>
+                            <option value="Rwanda">Rwanda</option>
+                            <option value="Kenya">Kenya</option>
+                            <option value="Uganda">Uganda</option>
+                            <option value="Tanzania">Tanzania</option>
                         </select>
                     </div>
                     <div class="flex-input-center responsive-margin-top">
                         <label for="user_city"><b>City</b></label>
                         <select name="user_city" id="user_city" >
                             <option value="" selected disabled>Select city where you stay</option>
-                            <option value="">Bukavu</option>
-                            <option value="">Kigali</option>
-                            <option value="">Kampala</option>
-                            <option value="">Nairobi</option>
-                            <option value="">Dar-es-salem</option>
-                            <option value="">Kinshasa</option>
-                            <option value="">Gisenyi</option>
-                            <option value="">Goma</option>
+                            <option value="Bukavu">Bukavu</option>
+                            <option value="Kigali">Kigali</option>
+                            <option value="Kampala">Kampala</option>
+                            <option value="Nairobi">Nairobi</option>
+                            <option value="Dar-es-salem">Dar-es-salem</option>
+                            <option value="Kinshasa">Kinshasa</option>
+                            <option value="Gisenyi">Gisenyi</option>
+                            <option value="Goma">Goma</option>
                         </select>
                         <p><span class="error error-city"></span></p>
                     </div>
